add architecture test & fix field injection